Fix(ScheduleGrid): align day tags with the events
The flex configuration didn't align the days row
with the event columns properly, fixed that

--- a/src/SchedulePlanner/Schedule/ScheduleGrid.module.scss
+++ b/src/SchedulePlanner/Schedule/ScheduleGrid.module.scss
@@ -27,6 +27,14 @@
     border-radius: 1rem 1rem 0 0;
     background-color: vars.$calendar-days-row-bg;
     cursor: default;
+    flex: 8;
+    padding-right: 0.5rem;
+  }
+
+  &__day {
+    margin: auto;
+    flex: 1;
+    text-align: center;
   }
 
   &__content {
